@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [jan] Fix sending alarm e-mail messages.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1200,7 +1200,7 @@
    <date>2012-10-12</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [jan] Fix sending alarm e-mail messages.
    </notes>
   </release>
  </changelog>
